# sf-runtime

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
backend_cpu/: CMakeLists.txt
backend_cpu/include/sionflow/backend_cpu/: sf_backend_cpu.h
backend_cpu/src/: sf_backend_cpu.c
cmake/: sf-runtime-config.cmake.in
engine/: CMakeLists.txt
engine/include/sionflow/engine/: sf_engine.h  sf_pipeline.h
engine/src/: sf_engine.c  sf_engine_internal.h  sf_pipeline.c
host/: CMakeLists.txt
host/include/sionflow/host/: sf_host_desc.h  sf_host_headless.h  sf_host_sdl.h
host/src/: sf_assets.c  sf_host_common.c  sf_host_headless.c  sf_host_internal.h  sf_host_sdl.c  sf_loader.c  sf_loader.h
ops/: CMakeLists.txt
ops/include/sionflow/ops/: sf_ops_core.h
ops/src/: sf_kernel_utils.h  sf_ops_array.c  sf_ops_core.c  sf_ops_internal.h  sf_ops_logic.c  sf_ops_math.c  sf_ops_matrix.c  sf_ops_state.c  sf_ops_system.c
sf-runner/: CMakeLists.txt
sf-runner/src/: main.c
sf-window/: CMakeLists.txt
sf-window/src/: main.c
tools/metadata/: cpu_spec.json
tools/templates/: sf_ops_auto_dispatch.c.j2  sf_ops_cpu_auto.c.j2
vcpkg-ports/sf-runtime/: portfile.cmake  vcpkg.json
